@@ -9,10 +9,31 @@
 #include <util.h>
 #include <arch/model/smp.h>
 #include <stdint.h>
+#include <plat/machine/devices_gen.h>
+
+#ifdef CONFIG_RISCV_USE_CLINT_MTIME
+/*
+ * Currently all RISC-V 32-bit platforms supported have the mtime register
+ * mapped at the same offset of the base address of the CLINT.
+ */
+#define CLINT_MTIME_OFFSET_LO 0xbff8
+#define CLINT_MTIME_OFFSET_HI 0xbffc
+#endif
 
 static inline uint64_t riscv_read_time(void)
 {
     word_t nH1, nL, nH2;
+
+#ifdef CONFIG_RISCV_USE_CLINT_MTIME
+    nH1 = *(volatile uint32_t *)(CLINT_PPTR + CLINT_MTIME_OFFSET_HI);
+    nL = *(volatile uint32_t *)(CLINT_PPTR + CLINT_MTIME_OFFSET_LO);
+    nH2 = *(volatile uint32_t *)(CLINT_PPTR + CLINT_MTIME_OFFSET_HI);
+    if (nH1 != nH2) {
+        /* Ensure that the time is correct if there is a rollover in the
+         * high bits between reading the low and high bits. */
+        nL = *(volatile uint32_t *)(CLINT_PPTR + CLINT_MTIME_OFFSET_LO);
+    }
+#else
     asm volatile(
         "rdtimeh %0\n"
         "rdtime  %1\n"
@@ -23,6 +44,8 @@ static inline uint64_t riscv_read_time(void)
          * high bits between reading the low and high bits. */
         asm volatile("rdtime  %0\n" : "=r"(nL));
     }
+#endif
+
     return (((uint64_t)nH2) << 32) | nL;
 }
 
