@@ -14,6 +14,7 @@ if(KernelPlatformHifive)
     config_set(KernelRiscVPlatform RISCV_PLAT "hifive")
     config_set(KernelPlatformFirstHartID FIRST_HART_ID 1)
     config_set(KernelOpenSBIPlatform OPENSBI_PLATFORM "generic")
+    set(KernelRiscvUseClintMtime ON)
     list(APPEND KernelDTSList "tools/dts/hifive.dts")
     list(APPEND KernelDTSList "src/plat/hifive/overlay-hifive.dts")
     declare_default_headers(
